# remus

./: .gitignore  BIBLIOGRAPHY.md  CHANGELOG.md  CMakeLists.txt  JOURNAL.md  METRICS.md  README.md  test_parser
.copilot/workspace/: BOOTSTRAP.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
.github/agents/: coding.agent.md  fast.agent.md  review.agent.md  setup.agent.md
.github/workflows/: appimage.yml  ci.yml  release.yml
assets/: remus.desktop
build-coverage/: CTestTestfile.cmake  coverage.filtered.info  coverage.info  coverage.list
build-coverage/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-coverage/coverage-report/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
build-coverage/remus-cli_autogen/: deps
build-coverage/tests/: CTestTestfile.cmake  test_cli_smoke  (+7 more)
docs/: CONSTANTS_AUDIT_AND_RECOMMENDATIONS.md  CONSTANTS_LIBRARY_IMPLEMENTATION.md  CONTRIBUTING.md  METADATA_PROCESSING_ANALYSIS.md  PHASE_1_2_IMPLEMENTATION_COMPLETE.md  PROCESSING_PIPELINE_REVIEW.md  QML_MAGIC_NUMBERS_FIX_COMPLETE.md  README.md  chd-conversion.md  data-model.md  emulator-frontend-compatibility.md  examples.md  metadata-providers.md  naming-standards.md  plan.md  quick-reference.md  requirements.md  verification-and-patching.md
scripts/: package_appimage.sh
src/core/: CMakeLists.txt  archive_creator.cpp  archive_creator.h  archive_extractor.cpp  archive_extractor.h  chd_converter.cpp  chd_converter.h  dat_parser.cpp  dat_parser.h  database.cpp  database.h  hasher.cpp  hasher.h  header_detector.cpp  header_detector.h  logging_categories.cpp  logging_categories.h  m3u_generator.cpp  m3u_generator.h  matching_engine.cpp  matching_engine.h  organize_engine.cpp  organize_engine.h  patch_engine.cpp  patch_engine.h  scanner.cpp  scanner.h  space_calculator.cpp  space_calculator.h  system_detector.cpp  system_detector.h  system_resolver.cpp  system_resolver.h  template_engine.cpp  template_engine.h  verification_engine.cpp  verification_engine.h
src/core/constants/: README.md  api.h  confidence.h  constants.h  database_schema.h  engines.h  errors.h  hash_algorithms.h  match_methods.h  network.h  providers.h  settings.h  systems.h  templates.h
src/metadata/: CMakeLists.txt  artwork_downloader.cpp  artwork_downloader.h  clrmamepro_parser.cpp  clrmamepro_parser.h  filename_normalizer.cpp  filename_normalizer.h  hasheous_provider.cpp  hasheous_provider.h  igdb_provider.cpp  igdb_provider.h  local_database_provider.cpp  local_database_provider.h  metadata_cache.cpp  metadata_cache.h  metadata_provider.cpp  metadata_provider.h  provider_orchestrator.cpp  provider_orchestrator.h  rate_limiter.cpp  rate_limiter.h  screenscraper_provider.cpp  screenscraper_provider.h  thegamesdb_provider.cpp  thegamesdb_provider.h
src/services/: CMakeLists.txt  conversion_service.cpp  conversion_service.h  hash_service.cpp  hash_service.h  library_service.cpp  library_service.h  match_service.cpp  match_service.h  patch_service.cpp  patch_service.h
src/tui/: CMakeLists.txt  app.cpp  app.h  background_task.h  compressor_screen.cpp  compressor_screen.h  launch_screen.cpp  launch_screen.h  library_screen.cpp  library_screen.h  main.cpp  main_menu_screen.cpp  main_menu_screen.h  manual_match_overlay.cpp  manual_match_overlay.h  match_screen.cpp  match_screen.h  options_screen.cpp  options_screen.h  organize_screen.cpp  organize_screen.h  patch_screen.cpp  patch_screen.h  pipeline.cpp  pipeline.h  screen.h  tool_hints.h
src/tui/widgets/: help_overlay.h  progress_bar.h  selectable_list.h  split_pane.h  text_input.h  toast.h
src/ui/: CMakeLists.txt  main.cpp  resources.qrc  theme_constants.cpp  theme_constants.h
src/ui/controllers/: artwork_controller.cpp  artwork_controller.h  conversion_controller.cpp  conversion_controller.h  dat_manager_controller.cpp  dat_manager_controller.h  export_controller.cpp  export_controller.h  library_controller.cpp  library_controller.h  match_controller.cpp  match_controller.h  metadata_editor_controller.cpp  metadata_editor_controller.h  patch_controller.cpp  patch_controller.h  processing_controller.cpp  processing_controller.h  settings_controller.cpp  settings_controller.h  verification_controller.cpp  verification_controller.h
src/ui/models/: file_list_model.cpp  file_list_model.h  match_list_model.cpp  match_list_model.h
src/ui/qml/: ArtworkView.qml  ConversionView.qml  ExportView.qml  GameDetailsView.qml  LibraryView.qml  LibraryView.qml.backup  MainWindow.qml  MatchReviewView.qml  PatchView.qml  SettingsView.qml  VerificationView.qml
src/ui/qml/components/: GameDetailPanel.qml  MatchPreviewCard.qml  PipelineStatusBar.qml  ProcessedListItem.qml  ProcessedSidebar.qml  SectionHeader.qml  SetupWizard.qml  ThemedButton.qml  ThemedCheckBox.qml  ThemedComboBox.qml  ThemedEditableField.qml  ThemedEditableTextArea.qml  ThemedProgressBar.qml  ThemedSlider.qml  ThemedSpinBox.qml  ThemedSwitch.qml  ThemedTextArea.qml  ThemedTextField.qml  UnprocessedListItem.qml  UnprocessedSidebar.qml  WorkflowBadge.qml  qmldir
tests/: CMakeLists.txt  test_archive_creator.cpp  test_archive_extractor.cpp  test_artwork_downloader.cpp  test_cache_deserialization.cpp  test_chd_converter.cpp  test_cli_helpers.cpp  test_cli_smoke.cpp  test_clrmamepro_parser.cpp  test_compressor_screen.cpp  test_constants.cpp  test_conversion_service.cpp  test_dat_manager_controller.cpp  test_dat_parser.cpp  test_database.cpp  test_export_controller.cpp  test_filename_normalizer.cpp  test_hash_algorithms.cpp  test_hash_service.cpp  test_hasheous_parsing.cpp  test_hasher.cpp  test_header_detector.cpp  test_levenshtein_matching.cpp  test_library_controller.cpp  test_library_screen.cpp  test_library_service.cpp  test_m3u_generator.cpp  test_match_screen.cpp  test_match_service.cpp  test_matching_engine.cpp  test_metadata_cache.cpp  test_metadata_provider.cpp  test_multi_file_detection.cpp  test_multi_signal_matching.cpp  test_options_screen.cpp  test_organize_engine.cpp  test_organize_screen.cpp  test_patch_engine.cpp  test_patch_screen.cpp  test_patch_service.cpp  (+18 more)
(+466 files in other folders)
